--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="skyBlue">#1ED69F</color>
     <color name="blue">#459DE4</color>
     <color name="red">#FF0000</color>
+    <color name="yellow">#D2C74E</color>
 </resources>
