--- a/app/src/main/res/layout/fragment_prescription.xml
+++ b/app/src/main/res/layout/fragment_prescription.xml
@@ -1,16 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.PrescriptionFragment">
+    tools:context=".fragments.PrescriptionFragment"
+    android:padding="16dp">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Prescription"
-        android:textSize="40sp"
-        />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/PlainText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Prediction Model"
+            android:textSize="28sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/InputBox"
+            android:layout_marginBottom="16dp"
+            />
+
+        <EditText
+            android:id="@+id/InputBox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Enter symptoms here..."
+            android:padding="12dp"
+            android:background="@android:drawable/editbox_background"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@id/PlainText"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="16dp"
+            />
+
+        <Button
+            android:id="@+id/predictBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Predict"
+            android:textAllCaps="false"
+            android:backgroundTint="@color/black"
+            android:textColor="@android:color/white"
+            android:paddingVertical="12dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/InputBox"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/PredictedDisease"
+            />
+
+        <TextView
+            android:id="@+id/PredictedDisease"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Predicted disease will appear here"
+            android:textSize="18sp"
+            android:textColor="@android:color/black"
+            android:gravity="center"
+            android:padding="16dp"
+            app:layout_constraintTop_toBottomOf="@id/predictBtn"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
