--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,51 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login"
+    tools:context=".Signup"
     android:padding="10dp">
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/name"
+        android:padding="10dp"
         android:layout_width="400dp"
+        android:layout_height="50dp"
+        android:hint="Enter the Name"
+        app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintVertical_bias="0.39"
+        tools:ignore="MissingConstraints" />
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="400dp"
+        android:padding="10dp"
         android:layout_height="50dp"
         android:hint="@string/LoginData"
         app:layout_constraintBottom_toBottomOf="parent"
-
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39" />
+        app:layout_constraintVertical_bias="0.39"
+        tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/password"
+        android:padding="10dp"
+        android:id="@+id/setpassword"
         android:layout_width="400dp"
         android:layout_height="50dp"
         android:hint="Enter the password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
-        app:layout_constraintTop_toBottomOf="@id/username"
-        app:layout_constraintVertical_bias="0.062" />
+        app:layout_constraintTop_toBottomOf="@id/email"
+        app:layout_constraintVertical_bias="0.032"
+        tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/loginbutton"
+        android:id="@+id/signup_button"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
-        android:text="Login"
+        android:text="Signup"
         android:backgroundTint="@color/black"
         android:layout_marginBottom="268dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
-
-    <Button
-        android:id="@+id/signup_login"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="32dp"
-        android:backgroundTint="@color/black"
-        android:text="Signup"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />
+        app:layout_constraintTop_toBottomOf="@+id/setpassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
