--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -23,35 +23,8 @@
             />
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/confirmP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:letterSpacing="0.1"
-        android:text="@string/sign_up2"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.074" />
-
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="20dp"
-        android:layout_height="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.04"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.045"
-        app:srcCompat="@drawable/back" />
-
     <EditText
-        android:id="@+id/firstName"
+        android:id="@+id/name"
         android:layout_width="350dp"
         android:layout_height="48dp"
         android:background="@drawable/rounded_edittext_background"
@@ -67,22 +40,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.174" />
 
-    <EditText
-        android:id="@+id/lastName"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:background="@drawable/rounded_edittext_background"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="@string/last_name"
-        android:inputType="text"
-        android:letterSpacing="0.1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.262"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.273" />
 
     <EditText
         android:id="@+id/email"
@@ -98,11 +55,10 @@
         app:layout_constraintHorizontal_bias="0.262"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.374" />
-
+        app:layout_constraintVertical_bias="0.295" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/setpassword"
         android:layout_width="350dp"
         android:layout_height="48dp"
         android:layout_marginStart="24dp"
@@ -117,7 +73,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.42" />
+        app:layout_constraintVertical_bias="0.357" />
 
     <EditText
         android:id="@+id/ConfirmPassword"
@@ -135,10 +91,10 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.528" />
+        app:layout_constraintVertical_bias="0.499" />
 
     <Button
-        android:id="@+id/signUp"
+        android:id="@+id/signup_button"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_edittext_background"
@@ -163,7 +119,7 @@
         app:layout_constraintHorizontal_bias="0.884"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.47"
+        app:layout_constraintVertical_bias="0.427"
         app:srcCompat="@drawable/eye" />
 
     <ImageView
@@ -175,7 +131,7 @@
         app:layout_constraintHorizontal_bias="0.884"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.569"
+        app:layout_constraintVertical_bias="0.542"
         app:srcCompat="@drawable/eye" />
 
     <ImageView
@@ -234,27 +190,15 @@
         app:srcCompat="@drawable/first_name" />
 
     <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="20dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.066"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.269"
-        app:srcCompat="@drawable/first_name" />
-
-    <ImageView
         android:id="@+id/imageView18"
         android:layout_width="20dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.065"
+        app:layout_constraintHorizontal_bias="0.061"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.379"
+        app:layout_constraintVertical_bias="0.303"
         app:srcCompat="@drawable/email1" />
 
     <ImageView
@@ -263,10 +207,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.066"
+        app:layout_constraintHorizontal_bias="0.061"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.472"
+        app:layout_constraintVertical_bias="0.412"
         app:srcCompat="@drawable/password1" />
 
     <ImageView
@@ -278,7 +222,7 @@
         app:layout_constraintHorizontal_bias="0.066"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.57"
+        app:layout_constraintVertical_bias="0.543"
         app:srcCompat="@drawable/password1" />
 
 
