--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -24,5 +24,11 @@
             android:icon="@drawable/team"
             android:title="team"
             />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/baseline_logout_24"
+            android:title="Logout"
+            />
+
     </group>
 </menu>
