dashboard profile image loading successful

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -20,7 +20,7 @@
         >
 
         <ImageView
-            android:id="@+id/register_user_image"
+            android:id="@+id/register_userimage"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
