navbar and dashboard username getting loaded successfully

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -28,6 +28,7 @@
     </androidx.cardview.widget.CardView>
 
         <TextView
+            android:id="@+id/Uername_navbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="User Profile"
