--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -86,7 +86,7 @@
                 </RelativeLayout>
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/Username_dashboard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
