--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,51 +4,90 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login"
-    android:padding="10dp">
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="400dp"
-        android:layout_height="50dp"
-        android:hint="@string/LoginData"
-        app:layout_constraintBottom_toBottomOf="parent"
+    android:background="@color/white"
+    tools:context=".Login">
 
-        app:layout_constraintHorizontal_bias="0.454"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39" />
-
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="400dp"
-        android:layout_height="50dp"
-        android:hint="Enter the password"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
-        app:layout_constraintTop_toBottomOf="@id/username"
-        app:layout_constraintVertical_bias="0.062" />
-
-    <Button
-        android:id="@+id/loginbutton"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="50dp"
-        android:text="Login"
-        android:backgroundTint="@color/black"
-        android:layout_marginBottom="268dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="450dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/bg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/signup_login"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="32dp"
-        android:backgroundTint="@color/black"
-        android:text="Signup"
-        app:layout_constraintEnd_toEndOf="parent"
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:text="Health \nConnect!"
+        android:layout_marginHorizontal="40dp"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        app:cardElevation="25dp"
+        app:cardBackgroundColor="@color/white"
+        android:layout_height="340dp"
+        android:layout_margin="25dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/bg"/>
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:layout_marginHorizontal="15dp"
+                android:hint="Email"
+                android:drawablePadding="8dp"
+                android:drawableStart="@drawable/baseline_mail_outline_24"/>
+            <EditText
+
+                android:id="@+id/password"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:hint="Enter Password"
+                android:drawablePadding="8dp"/>
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/loginbutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/bg"
+                app:cornerRadius="5dp"
+                android:text="Log in"
+                android:layout_margin="15dp"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/signup_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/bg"
+                app:cornerRadius="5dp"
+                android:text="Sign Up"
+                app:strokeColor="@color/bg"
+                app:strokeWidth="2dp"
+                android:layout_marginHorizontal="15dp"/>
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
