feat: added the video conferencing feature

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="skyBlue">#1ED69F</color>
     <color name="blue">#459DE4</color>
+    <color name="purple">#4b54c0</color>
     <color name="red">#FF0000</color>
     <color name="bg">#70b3bf</color>
     <color name="yellow">#D2C74E</color>
