--- a/android/app/src/main/res/layout/fragment_team.xml
+++ b/android/app/src/main/res/layout/fragment_team.xml
@@ -5,12 +5,27 @@
     android:layout_height="match_parent"
     tools:context=".fragments.TeamFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Team"
-        android:textSize="40sp"
-        />
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="20dp">
+
+        <EditText
+            android:id="@+id/roomIdInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter Room ID"
+            android:textSize="18sp"/>
+
+        <Button
+            android:id="@+id/joinButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Join Room"
+            android:layout_marginTop="10dp"/>
+
+    </LinearLayout>
 
 </FrameLayout>
